Fix headline on tablet

--- a/theme/styles/parts/header.less
+++ b/theme/styles/parts/header.less
@@ -5,7 +5,7 @@
 	}
 
 
-	@media @media-m-max {
+	@media @media-s-max {
 		position: fixed;
 		top: 0;
 		left: 0;
